<resources>
    <string name="app_name">2022MobileProgramming</string>

    <string name="ACME_Corp_Cation">login</string>
    <string name="Enter_your_First_and_Last_name">Enter your First and Last name</string>
    <string name="login">login</string>

    <string name="coffee_bean">what kind of coffee?</string>
    <string name="decaf">Decaf</string>
    <string name="espresso">Espresso</string>
    <string name="colombian">Colombian</string>
    <string name="coffee_addons">What else in your coffee?</string>
    <string name="sugar">sugar</string>
    <string name="cream">cream</string>
    <string name="pay">pay</string>

    <!--String related to hint-->
    <string name="hint_name">이름</string>
    <string name="hint_department">학과</string>
    <string name="hint_id">학번</string>
    <string name="hint_url">URL</string>
    <string name="hint_phone">Phone</string>

    <string name="hint_url_lowercase">url</string>
    <string name="hint_phone_lowercase">phone</string>

    <!--String related to button-->
    <string name="button_login">로그인</string>
    <string name="button_web">웹 접속</string>
    <string name="button_call">전화 연결</string>
    <string name="button_back">돌아가기</string>

    <!--Assign 2-->
    <string name="button_main">메인</string>
    <string name="button_menu">메뉴</string>
    <string name="title_listview">ListView Fragment</string>
    <string name="title_spinner">Spinner Fragment</string>

    <!--Assign 3-->
    <string name="record">기록</string>
    <string name="back">돌아가기</string>
    <string name="stop">중지</string>
    <string name="pause">일시정지</string>
    <string name="more">더보기</string>
    <string name="start">시작</string>
</resources>