<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.assign.assign1.Assign1Activity">

    <!--Edittext: 이름, 학과, 학번-->
    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>
    <EditText
        android:id="@+id/department_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_department"/>
    <EditText
        android:id="@+id/student_id_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_id"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_gravity="center" />

    <!--Edittext & Button: URL-->
    <EditText
        android:id="@+id/disabled_url_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_url"
        android:enabled="false"/>
    <Button
        android:id="@+id/web_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_web"
        android:layout_gravity="center" />

    <!--Edittext & Button: Phone-->
    <EditText
        android:id="@+id/disabled_phone_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_phone"
        android:enabled="false"/>
    <Button
        android:id="@+id/call_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_call"
        android:layout_gravity="center" />

</LinearLayout>