<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Coffee Type-->
    <RadioGroup
        android:id="@+id/week5_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff993300"
            android:text="@string/coffee_bean"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <RadioButton
            android:id="@+id/week5_decaf_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decaf" />
        <RadioButton
            android:id="@+id/week5_espresso_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/espresso" />
        <RadioButton
            android:id="@+id/week5_colombian_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/colombian" />

    </RadioGroup>

    <!--Options-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff993300"
        android:text="@string/coffee_addons"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/week5_cream_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cream"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/week5_sugar_cb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:textStyle="bold" />

    <Button
        android:id="@+id/week5_pay_btn"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:textStyle="bold" />

</LinearLayout>