<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="00:00:00:00"
            android:textSize="32sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/more_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:layout_below="@id/control_buttons_layout"
                android:background="@drawable/button_border"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/control_buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/record_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/record"
                    android:background="@drawable/button_border"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/pause_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pause"
                    android:background="@drawable/button_border"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/stop_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stop"
                    android:background="@drawable/button_border"
                    android:textStyle="bold"/>
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:textStyle="bold"
            android:text="@string/start"/>

    </LinearLayout>
</LinearLayout>